@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.346 2002/12/29 04:38:42 hubertf Exp $
+# $NetBSD: Makefile,v 1.347 2002/12/30 18:05:10 sommerfeld Exp $
 #
 
 COMMENT=	Networking tools
@@ -109,6 +109,7 @@ SUBDIR+=	lambdamoo-doc
 SUBDIR+=	latd
 SUBDIR+=	lftp
 SUBDIR+=	libIDL
+SUBDIR+=	libares
 SUBDIR+=	libnids
 SUBDIR+=	libpcap
 SUBDIR+=	libsscript
